[package]
author = ["110416"]
name = "playground"
description = "rust playground"
category = ["palyground"]
version = "0.1.0"
edition = "2018"
keyword = ["rust"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ItoYo16u/rust-playground"

[lib]
#proc-macro = true

[dependencies]

#proc-macro2 = "^1.0.24"
#quote = "^1.0.9"
#syn = "1.0.64"

# system
# nix = "0.19.0"
# dirs

# http
reqwest = "^0.11"

# json parser
serde = "^1.0.124"
serde_json = "^1.0.64"
serde_derive= "^1.0.24"

# async runtime
# glommio = "^0.4.1"
# tokio = {version = "^1.3.0",features = ["full"]}

# note: you can specify package name with `package = "<alias>"` instead of import deps like `use A as <alias>`

# github dependency
# <name> = { git = "https://github.com/user/repo",branch = "branch name" } 
# to pull the latest commit, run `cargo update`

# path dependencies
# <name> = { path = "path/to/dep" }

[dev-dependencies]


[build-dependencies]


